# ibus-rtk

./: .gitignore  Makefile.am  README.md  configure.ac  ibus-rtk.spec.in
dicts/: Makefile.am  get-dicts.sh
icons/: Makefile.am
src/: Makefile.am  engine.c  engine.h  lookup.c  lookup.h  main.c  rtk.xml.in  rtklookup.c
